--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -14,8 +15,43 @@
   }
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.swiper-pagination-bullet {
+  background-color: #c2c2c2 !important;
+  opacity: 1;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #007bff !important;
+  opacity: 1;
+}
+
+.gradientImage {
+  -webkit-mask-image: linear-gradient(
+    to left,
+    rgba(0, 0, 0, 1) 0%,  /* Départ totalement opaque */
+    rgba(0, 0, 0, 0) 50%, /* Transition progressive */
+    rgba(0, 0, 0, 0) 70%, /* Presque transparent */
+    rgba(0, 0, 0, 0) 100%  /* Complètement transparent */
+  );
+  
+  mask-image: linear-gradient(
+    to left,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 1) 40%,
+    rgba(0, 0, 0, 0) 70%,
+    rgba(0, 0, 0, 0) 100%
+  );
+}
+
+
